Added map again

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>The Store</title>
     <link rel='stylesheet' href='/assets/styles.css' />
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_API %>&libraries=places"></script>
     <script defer src='/dist/main.js'></script>
   </head>
   <body>
