--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
-  <head>
-    <title>The Store</title>
-    <link rel='stylesheet' href='/assets/styles.css' />
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_API %>&libraries=places"></script>
-    <script defer src='/dist/main.js'></script>
-  </head>
-  <body>
-    <div id='root'></div>
-  </body>
+
+<head>
+  <title>The Store</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Solway:wght@300&display=swap" rel="stylesheet">
+  <link rel='stylesheet' href='/assets/styles.css' />
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_API %>&libraries=places"></script>
+  <script defer src='/dist/main.js'></script>
+</head>
+
+<body>
+  <div id='root'></div>
+</body>
+
 </html>
